k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registrum-api-deployment
spec:
  selector:
    matchLabels:
      component: registrum-api
  replicas: 1
  template:
    metadata:
      labels:
        component: registrum-api
    spec:
      containers:
        - name: registrum-api
          image: acmuic.azurecr.io/acm-uic/registrum/api:main
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
      imagePullSecrets:
        - name: regcred
