k8s/banner-data-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registrum-banner-data-deployment
spec:
  selector:
    matchLabels:
      component: registrum-banner-data
  replicas: 1
  template:
    metadata:
      labels:
        component: registrum-banner-data
    spec:
      containers:
        - name: registrum-banner-data
          image: acmuic.azurecr.io/acm-uic/registrum/banner-data:main
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
