k8s/banner-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registrum-banner-deployment
spec:
  selector:
    matchLabels:
      component: registrum-banner
  replicas: 1
  template:
    metadata:
      labels:
        component: registrum-banner
    spec:
      containers:
        - name: registrum-banner
          image: acmuic.azurecr.io/acm-uic/registrum/banner:master
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
