k8s/Mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: "mongo"
  labels:
    name: "mongo"
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: "mongo"
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: "mongo"
spec:
  serviceName: "mongo"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          command:
            - mongod
            - "--replSet"
            - rs0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: registrum-mongo-persistent
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: registrum-mongo-persistent
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
