k8s/RegistrumApi.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: registrum-api
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registrum-api-deployment
spec:
  selector:
    matchLabels:
      app: registrum-api
  replicas: 1
  template:
    metadata:
      labels:
        app: registrum-api
    spec:
      containers:
        - name: registrum-api
          image: alexchomiak/registrum-api-test:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
