k8s/RegistrumBanner.yaml
apiVersion: v1
kind: Service
metadata:
  name: banner
spec:
  selector:
    app: registrum-banner
  ports:
    - port: 4001
      targetPort: 4001
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registrum-banner-deployment
spec:
  selector:
    matchLabels:
      app: registrum-banner
  replicas: 1
  template:
    metadata:
      labels:
        app: registrum-banner
    spec:
      containers:
        - name: registrum-banner
          image: alexchomiak/registrum-banner-test:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
