k8s/RegistrumBannerData.yaml
apiVersion: v1
kind: Service
metadata:
  name: banner-data
spec:
  selector:
    app: registrum-banner-data
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registrum-banner-data-deployment
spec:
  selector:
    matchLabels:
      app: registrum-banner-data
  replicas: 1
  template:
    metadata:
      labels:
        app: registrum-banner-data
    spec:
      containers:
        - name: registrum-banner-data
          image: alexchomiak/registrum-banner-data-test:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
