k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: registrum-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: registrum-api
  ports:
    - port: 4000
      targetPort: 4000
