k8s/banner-service.yml
apiVersion: v1
kind: Service
metadata:
  name: registrum-banner-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: registrum-banner
  ports:
    - port: 4001
      targetPort: 4001
