k8s/client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: registrum-client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: registrum-client
  ports:
    - port: 80
      targetPort: 3000
